objects/CMPL123CME__Investigation__c.object
<CustomObject>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause/Conclusion Choice  1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (D-Investigation Conclusion-Choice 1)</relationshipLabel>
        <relationshipName>D_Choice1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause/Conclusion Choice  2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (D-Investigation Conclusion-Choice 2)</relationshipLabel>
        <relationshipName>Investigations_Evaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause/Conclusion Choice  3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (D-Investigation Conclusion-Choice 3)</relationshipLabel>
        <relationshipName>Investigations_Evaluations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_1__c</fullName>
        <label>D-Investigation Conclusion-Choice 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>D_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_1_del__c</fullName>
        <label>D-Investigation Conclusion-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_2__c</fullName>
        <label>D-Investigation Conclusion-Choice 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>D_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_2_del__c</fullName>
        <label>D-Investigation Conclusion-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_3__c</fullName>
        <label>D-Investigation Conclusion-Choice 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>D_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Investigation_Conclusion_Choice_3_del__c</fullName>
        <label>D-Investigation Conclusion-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_MIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EU MIR</label>
        <referenceTo>CMPL123CME__EU_MIR__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Findings_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>FINDING CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Findings Code)</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCS_Approve_Approved__c</fullName>
        <label>GCS Approve Approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inquiry</label>
        <referenceTo>Inquiry__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_Evaluation_Number__c</fullName>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Investigation/Evaluation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_Annex_B__c</fullName>
        <inlineHelpText>This field is mandatory if you have not select the most detailed level for Type/Method</inlineHelpText>
        <label>Justification for Annex B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_Annex_C__c</fullName>
        <inlineHelpText>This field is mandatory if you have not select the most detailed level for Findings/Results</inlineHelpText>
        <label>Justification for Annex C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_Annex_D__c</fullName>
        <inlineHelpText>This field is mandatory if you have not select the most detailed level for Root Cause/Conclusion</inlineHelpText>
        <label>Justification for Annex D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Investigation</label>
        <referenceTo>CMPL123CME__Investigation__c</referenceTo>
        <relationshipLabel>Referenced Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOW_59MIN__c</fullName>
        <formula>NOW()-(59/(60*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOW-59MIN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RCA__c</fullName>
        <label>RCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Root Cause/Conclusion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>ROOT CAUSE CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Root Cause Code)</relationshipLabel>
        <relationshipName>Investigations_Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Status_For_CRM__c</fullName>
        <description>If the workflow status is "Closed - Done" , then it will make it as "Closed done" else it will be as it is. This field value is send back to CRM.</description>
        <formula>IF( CMPL123_WF_Status__c = 'Closed - Done', 'Closed Done',IF( CMPL123_WF_Status__c = 'Closed - Canceled', 'Closed Cancelled',CMPL123_WF_Status__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow Status For CRM</label>
        <type>Text</type>
    </fields>
    <label>Investigation/Evaluation</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>Investigation_Evaluation_Number__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123_WF_Action__c</columns>
        <columns>CMPL123_WF_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123_WF_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed-Canceled</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status</fullName>
        <columns>NAME</columns>
        <columns>Investigation_Evaluation_Number__c</columns>
        <columns>CMPL123_WF_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>BMX_Approver_1__c</columns>
        <columns>BMX_Approver_2__c</columns>
        <columns>BMX_Approver_3__c</columns>
        <columns>BMX_Approver_4__c</columns>
        <columns>BMX_Investigation_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123_WF_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>MY Pending Approval Investigations</label>
    </listViews>
    <nameField>
        <label>Investigation/Evaluation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investigations/Evaluations</pluralLabel>
    <recordTypes>
        <fullName>BMX_Lock_Investigation</fullName>
        <active>true</active>
        <description>Only Additional Information can be edited</description>
        <label>Lock Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Investigation</fullName>
        <active>true</active>
        <description>Used for child investigations only</description>
        <label>Child Investigation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Annex_BCD_Code_choice_should_not_be_in_B</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

(CMPL123_WF_Status__c = 'Complete Investigation'),

OR(

ISPICKVAL(B_Investigation_Type_Code_Choice_1__c, 'B21 - Type of Investigation Not Yet Determined'),
ISPICKVAL(B_Investigation_Type_Code_Choice_2__c	, 'B21 - Type of Investigation Not Yet Determined'),
ISPICKVAL(B_Investigation_Type_Code_Choice_3__c	, 'B21 - Type of Investigation Not Yet Determined')
),

OR(
C_Investigation_Findings_Code_Choice1__c&lt;&gt;'C21 - Results Pending Completion of Investigation',
C_Investigation_Findings_Code_Choice2__c&lt;&gt;'C21 - Results Pending Completion of Investigation',
C_Investigation_Findings_Code_Choice3__c&lt;&gt;'C21 - Results Pending Completion of Investigation'


),

OR(

D_Investigation_Conclusion_Choice1__c&lt;&gt;'D16 - Conclusion Not Yet Available',
D_Investigation_Conclusion_Choice2__c&lt;&gt;'D16 - Conclusion Not Yet Available',
D_Investigation_Conclusion_Choice3__c&lt;&gt;'D16 - Conclusion Not Yet Available'
 )
)</errorConditionFormula>
        <errorDisplayField>BMX_Additional_Information__c</errorDisplayField>
        <errorMessage>If Annex BCD Contains the picklist "B21  - Type of Investigation Not Yet Determined" Investigation cannot be closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annex_B_Code_choice_should_not_be_in_B21</fullName>
        <active>true</active>
        <errorConditionFormula>AND((CMPL123_WF_Status__c = 'Complete Investigation'),
OR(
ISPICKVAL(B_Investigation_Type_Code_Choice_1__c, 'B21 - Type of Investigation Not Yet Determined'),
ISPICKVAL(B_Investigation_Type_Code_Choice_2__c	, 'B21 - Type of Investigation Not Yet Determined'),
ISPICKVAL(B_Investigation_Type_Code_Choice_3__c	, 'B21 - Type of Investigation Not Yet Determined')))</errorConditionFormula>
        <errorMessage>If Annex B Contains the picklist "B21 - Type of Investigation Not Yet Determined" Investigation cannot be closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annex_C_Code_choice_should_not_be_in_C21</fullName>
        <active>true</active>
        <errorConditionFormula>AND((CMPL123_WF_Status__c = 'Complete Investigation'),
OR(
ISPICKVAL(C_Investigation_Findings_Code_Choice_1__c, 'C21 - Results Pending Completion of Investigation'),
ISPICKVAL(C_Investigation_Findings_Code_Choice_2__c , 'C21 - Results Pending Completion of Investigation'),
ISPICKVAL(C_Investigation_Findings_Code_Choice_3__c , 'C21 - Results Pending Completion of Investigation'),
ISPICKVAL(C_Investigation_Findings_Code_Choice_4__c , 'C21 - Results Pending Completion of Investigation'),
ISPICKVAL(C_Investigation_Findings_Code_Choice_5__c , 'C21 - Results Pending Completion of Investigation'),
ISPICKVAL(C_Investigation_Findings_Code_Choice_6__c , 'C21 - Results Pending Completion of Investigation')))</errorConditionFormula>
        <errorMessage>If Annex C Contains the picklist "C21 - Results Pending Completion of Investigation" Investigation cannot be closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annex_D_Code_choice_should_not_be_in_D16</fullName>
        <active>true</active>
        <errorConditionFormula>AND((CMPL123_WF_Status__c = 'Complete Investigation'),
OR(
ISPICKVAL(D_Investigation_Conclusion_Choice_1__c, 'D16 - Conclusion Not Yet Available'),
ISPICKVAL(D_Investigation_Conclusion_Choice_2__c, 'D16 - Conclusion Not Yet Available'),
ISPICKVAL(D_Investigation_Conclusion_Choice_3__c, 'D16 - Conclusion Not Yet Available'),
ISPICKVAL(D_Investigation_Conclusion_Choice_4__c, 'D16 - Conclusion Not Yet Available'),
ISPICKVAL(D_Investigation_Conclusion_Choice_5__c, 'D16 - Conclusion Not Yet Available'),
ISPICKVAL(D_Investigation_Conclusion_Choice_6__c, 'D16 - Conclusion Not Yet Available')))</errorConditionFormula>
        <errorMessage>If Annex D Contains the picklist "D16 - Conclusion Not Yet Available" Investigation cannot be closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_CAPA_Justification_should_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( BMX_CAPA_Required__c, 'No'),ISBLANK(  BMX_CAPA_Justification__c ) )</errorConditionFormula>
        <errorDisplayField>BMX_CAPA_Justification__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_CAPA_Number_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( BMX_CAPA_Required__c, 'Yes'),ISBLANK(   BMX_CAPA_Number__c ) )</errorConditionFormula>
        <errorDisplayField>BMX_CAPA_Number__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Correction_Number_Required</fullName>
        <active>true</active>
        <description>Correction number field is mandatory when Correction Required Field is set YES</description>
        <errorConditionFormula>AND( OR(CMPL123_WF_Action__c = "Complete Investigation",CMPL123_WF_Action__c = "Complete Expert Investigation"),ISPICKVAL(BMX_Correction_Required__c, 'Yes'),
ISBLANK( Correction_Number__c ))</errorConditionFormula>
        <errorDisplayField>Correction_Number__c</errorDisplayField>
        <errorMessage>Correction Number field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Date_Product_Recvd_should_nt_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(BMX_Product_Returned__c, 'Product Return Received'),   ISBLANK( BMX_Date_Product_Received__c ) )</errorConditionFormula>
        <errorDisplayField>BMX_Date_Product_Received__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Evidence_of_Trend_should_nt_be_blank</fullName>
        <active>true</active>
        <description>US-INV-029 change log</description>
        <errorConditionFormula>AND( ISPICKVAL(BMX_Is_there_a_trend__c, 'Yes'),   ISBLANK(BMX_Evidence_of_Trend__c) )</errorConditionFormula>
        <errorDisplayField>BMX_Evidence_of_Trend__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Fab_Justification_should_nt_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( BMX_FAB_Required__c , 'No'),   ISBLANK(  BMX_FAB_Justification__c ) )</errorConditionFormula>
        <errorDisplayField>BMX_FAB_Justification__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Locked_record_when_status_is_Opened</fullName>
        <active>false</active>
        <description>User can edit Additional Information field when record is Reopened</description>
        <errorConditionFormula>AND(  CMPL123_WF_Action__c = 'Reopen',  
      NOT(ISCHANGED(BMX_Additional_Information__c)),
      ISCHANGED( BMX_Comments_Available__c )
      )</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Patient_Data_Destroy_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(BMX_Patient_Data_Copied_to_BMX_System__c,'Yes'),
ISBLANK(TEXT(BMX_All_Copies_of_Patient_Data_Destroyed__c)))</errorConditionFormula>
        <errorDisplayField>BMX_All_Copies_of_Patient_Data_Destroyed__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Prevent_Edit_Investigation</fullName>
        <active>true</active>
        <errorConditionFormula>CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c == "Closed - Completed"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Prevent_Inv_Frm_Create_or_Edit</fullName>
        <active>true</active>
        <description>Prevent Editing or adding investigation when the complaint is closed</description>
        <errorConditionFormula>OR( 
AND(ISNEW(), CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed'), 
CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed')</errorConditionFormula>
        <errorMessage>Can not create/edit a Investigation for closed Complaint</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_Prevent_edit_for_closed_inquiry</fullName>
        <active>true</active>
        <errorConditionFormula>Inquiry__r.CMPL123_WF_Status__c =="Closed - Complaint"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMX_RCC_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CMPL123_WF_Action__c = 'Complete Investigation', ISBLANK(     Root_Cause_Code__c ) )</errorConditionFormula>
        <errorDisplayField>Root_Cause_Code__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Investigation_Steps_are_Completed</fullName>
        <active>true</active>
        <description>All fields in all investigation steps need to be completed prior to performing "Complete Investigation" on the record.</description>
        <errorConditionFormula>AND(CMPL123_WF_Action__c = 'Complete Investigation', BMX_Number_of_Questions_Unanswered__c &gt; 0)</errorConditionFormula>
        <errorMessage>Complete Investigation Steps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conclusion_1_is_mandatory</fullName>
        <active>true</active>
        <description>Root cause/conclusion 1 is mandatory before closing the investigation</description>
        <errorConditionFormula>AND(( CMPL123_WF_Action__c  = 'Complete Investigation'),
ISBLANK(D_Investigation_Conclusion_Choice1__c))</errorConditionFormula>
        <errorMessage>Root cause/conclusion 1 is mandatory before closing the investigation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expert_Investigator_should_not_be_blank</fullName>
        <active>true</active>
        <description>For investigation, system to check that at least one of the expert investigator fields is populated prior to the record moving to "Pending Expert Investigation" status.</description>
        <errorConditionFormula>AND(
OR(CMPL123_WF_Action__c = 'Require Expert Investigation', CMPL123_WF_Action__c = 'Rework'),
AND(ISBLANK( BMX_Expert_Investigator__c),
ISBLANK(BMX_Expert_Investigator_text__c)),
ISCHANGED(CMPL123_WF_Action__c)
)</errorConditionFormula>
        <errorMessage>One of the Expert investigator is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Investigation_Approver_Should_nt_b_blnk</fullName>
        <active>true</active>
        <description>Investigation Approver field should be populated prior to entering "Pending Approval" status.</description>
        <errorConditionFormula>AND(CMPL123_WF_Action__c = 'Complete Investigation', 
    ISBLANK(BMX_Investigation_Approver__c))</errorConditionFormula>
        <errorMessage>Investigation Approver must not be blank</errorMessage>
    </validationRules>
</CustomObject>